# MLflow_

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/256557236605187031/: meta.yaml
mlruns/256557236605187031/a3fcaa2361f74b97a5229e717520b921/: meta.yaml
mlruns/451070335349633589/: meta.yaml
mlruns/451070335349633589/0d5a9578636444bd917f17956f54b6e8/: meta.yaml
mlruns/451070335349633589/4a4d1705ac124f909e36063f109f25d4/: meta.yaml
mlruns/451070335349633589/4d0edfad9d074b8ea9046011a7a1556a/: meta.yaml
mlruns/451070335349633589/782a2b18f7004356afc340b843d7f63a/: meta.yaml
mlruns/451070335349633589/7c9e5a22f41541a69729be6d44385dc9/: meta.yaml
mlruns/451070335349633589/f6a3e5e26c264986b4982b8cdc597b14/: meta.yaml
mlruns/471506682627355635/: meta.yaml
mlruns/471506682627355635/7bbd800ef57f417fa6abcfda111e9a76/: meta.yaml
mlruns/480922811531264080/: meta.yaml
mlruns/480922811531264080/5e6b43c0bb7b47458899b5bf1a40d559/: meta.yaml
mlruns/480922811531264080/69b6fc37758d4b389a128e13ac5a7df6/: meta.yaml
mlruns/480922811531264080/826fcf92fe2a4a7e9ff5ec04dd2a080e/: meta.yaml
mlruns/480922811531264080/dd5c8fbc51ca4daabdcf9b5d524ae64b/: meta.yaml
mlruns/models/Fraud_Detection-1/: meta.yaml
mlruns/models/XGB/: meta.yaml
mlruns/models/XGBoost/: meta.yaml
mlruns/models/anomaly-detection-prod/: meta.yaml
notebooks/: binary_classf.ipynb  binary_classification_MLflow_dagshub.ipynb  binary_classification_MLflow_local.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/187755359696504418/: meta.yaml
(+66 files in other folders)
