[tool.poetry]
name = "learning-mlflow"
version = "0.1.0"
description = "This poetry file is to manage dependencies for the MLFlow tutorial repository"
authors = ["ppkhairn <ppkhairn@mtu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.20.3"
xgboost = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
