[tool.poetry]
name = "mlflow_"
version = "0.1.0"
description = "Poetry file for MlFlow projects"
authors = ["Pushkar Khairnar <ppkhairn@mtu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
setuptools = "^80.9.0"
wheel = "^0.45.1"
dagshub = "^0.5.10"
mlflow = "^3.1.1"
xgboost = "1.7.6"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
